Remove loading text from the loading indicator in page.html for a cleaner UI presentation.

--- a/templates/page.html
+++ b/templates/page.html
@@ -110,7 +110,7 @@
       <!-- Infinite Scroll Container -->
       <div id="infinite-scroll-container" class="infinite-scroll-container">
         <div id="infinite-content" class="infinite-content mobile-view"></div>
-        <div id="loading-indicator" class="loading-indicator">Loading more stories...</div>
+        <div id="loading-indicator" class="loading-indicator"></div>
       </div>
 
       <!-- Main Content Columns -->
