--- a/static/linuxreport.css
+++ b/static/linuxreport.css
@@ -281,7 +281,7 @@ main > div:first-child {
 }
 
 #old-headlines-link {
-  display: inline-flex;
+  display: block;
   flex-direction: column;
   align-items: center;
   text-decoration: none;
